# heifu-release

./: .gitmodules  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  debian.store  package.xml  patches.conf  releaser_history.json  setup.py  tracks.yaml
actuators/: .gitmodules  README.md
actuators/gimbal/: CHANGELOG.rst  package.xml
actuators/gimbal/config/: xbox360_gimbal.yaml
actuators/gimbal/gimbal_firmware/: joy_teleop.py
actuators/gimbal/include/gimbal/: Gimbal.hpp
actuators/gimbal/launch/: joy_teleop.launch
actuators/gimbal/msg/: getGimbalAxes.msg
actuators/gimbal/src/: Gimbal.cpp  gimbal_node.cpp
autonomous-operation/: .gitmodules  README.md
autonomous-operation/collision_avoidance/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
autonomous-operation/planner/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
autonomous-operation/planners_manager/: CHANGELOG.rst  README.md  package.xml
autonomous-operation/rrt/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
autonomous-operation/waypoints-manager/: CHANGELOG.rst  CMakeLists.txt  package.xml
autonomous-operation/waypoints-manager/src/: waypoints_manager.cpp  waypoints_manager_node.cpp
config/: GPU-Voxels.yaml  GPU-Voxels_Jetson.yaml  params.yaml
control/: .gitmodules  README.md
control/control-bringup/: CHANGELOG.rst  package.xml
control/control-bringup/launch/: heifu_control.launch
control/mavros-commands/: CHANGELOG.rst  CMakeLists.txt
control/mavros-commands/src/: Mavros_commands.cpp
control/navigation-controller/: CHANGELOG.rst  CMakeLists.txt
control/navigation-controller/include/loiter_controller/: loiter_controller.hpp
control/navigation-controller/include/velocity_controller/: velocity_controller.hpp
control/navigation-controller/src/: position_controller.cpp  velocity_controller.cpp
control/priority-manager/: CHANGELOG.rst  CMakeLists.txt  package.xml
control/priority-manager/config/: Entries.yaml
control/priority-manager/include/msg_helpers_hpp/: msg_listing.hpp
control/priority-manager/include/priority_manager/: Priority_manager.hpp
control/priority-manager/launch/: priority_manager.launch
control/priority-manager/src/: Priority_manager.cpp
debian/: changelog  control  gbp.conf  rules
heifu/: CHANGELOG.rst  CMakeLists.txt  package.xml
heifu-bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
heifu-bringup/launch/: heifu_bringup.launch
heifu-gpu/: CHANGELOG.rst  CMakeLists.txt  package.xml
heifu_battery/: CHANGELOG.rst  package.xml
heifu_bringup/: CHANGELOG.rst  package.xml
heifu_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
heifu_description/launch/: gazebo.launch  heifu.launch
heifu_description/models/heifu_with_ardupilot/: model.sdf.xacro
heifu_description/models/heifu_with_standoffs/: model.sdf
heifu_diagnostic/: CHANGELOG.rst  CMakeLists.txt  package.xml
heifu_interface/: README.md  cameraStab.py  heifu_cam_interface.py  heifu_definitions.py  heifu_interface.py  itaNFZForbiddenOnly.kml  kill_process.sh  kml_interp.py  log.py  nfz_stop.py  playAudio.py  playAudio.sh  ptNFZForbiddenOnly.kml  runCameraStab.sh
heifu_mavros/: CHANGELOG.rst  CMakeLists.txt  package.xml
heifu_mavros/include/heifu_mavros/: Heifu_mavros.hpp
heifu_mavros/src/: Heifu_mavros.cpp
heifu_msgs/: CHANGELOG.rst  package.xml
heifu_safety/: CHANGELOG.rst  CMakeLists.txt  package.xml
heifu_safety/include/heifu_safety/: Heifu_safety.hpp
heifu_scripts_firmware/: gazebo-heifu.parm  loader.py  node.launch  sim_vehicle.py  vehicleinfo.py
heifu_simple_waypoint/: CHANGELOG.rst  CMakeLists.txt  package.xml
heifu_simple_waypoint/include/heifu_simple_waypoint/: Heifu_simple_waypoint.hpp
heifu_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml
heifu_usb/: 99-heifu.rules  README.md  usb_heifu.sh
interface/: .gitmodules  README.md
interface/gcs-interface/: CHANGELOG.rst  CMakeLists.txt  package.xml  requirements.txt
interface/gcs-interface/launch/: gcs_interface.launch
interface/gcs-interface/src/: __init__.py  actuators.py  commands.py  countries.py  gstreamer.py  heifu_interface.py  interface.py  itaNFZForbiddenOnly_N.kml  log.py  mission.py  nfz.py  nfz_stop.py  ptNFZ_N.kml  report.py  setup.py  utils.py
interface/gcs-interface/src/config/: configs.py
interface/status-diagnostic/: CHANGELOG.rst  package.xml
interface/status-diagnostic/include/status_diagnostic/: Status_diagnostic.hpp
interface/status-diagnostic/launch/: status_diagnostic.launch
interface/status-diagnostic/src/: Status_diagnostic.cpp  status_diagnostic_node.cpp
launch/: CollisionAvoidance.launch  CollisionAvoidanceBringup.launch  CollisionAvoidance_nodelets.launch  GPUVoxelROS_nodelets.launch  Planners_Manager.launch  apm.launch  apm_local.launch  gStreamer.launch  gcs_interface.launch  gimbal.launch  heifu_bringup.launch  mavros_commands.launch  navigation_controller.launch  waypoints_manager.launch
msg/: rfid_humtemp.msg
perception/: .gitmodules  README.md
scripts/: UseCase1.sh  UseCase2.sh  UseCase3.sh  spawn_drone.sh
sensing/: .gitmodules  README.md
sensors_node/: CMakeLists.txt
sensors_node/launch/: sensors_node.launch
sensors_node/src/: sensors_node.py
src/: Battery.cpp  GpuVoxelsRos.cpp  Heifu_diagnostic.cpp  Heifu_safety.cpp  Obstacle.cpp  Planners_Manager.cpp  RRT.cpp  battery.pkl  battery_node.cpp  formulas.py  heifu_definitions.py  heifu_interface.py  loiter_controller.cpp  mavros_commands_node.cpp  navigation_controller.cpp  navigation_controller_node.cpp  nfz_stop.py  priority_manager_node.cpp  ptNFZForbiddenOnly_N.kml  runGStreamer.py  sensors.py  stabilization_jetson  state.py
utils/: .gitmodules  README.md
utils/gnss-utils/: CHANGELOG.rst  CMakeLists.txt  package.xml
utils/gnss-utils/include/gnss_utils/: GNSS_utils.h  LLA2ENU.hpp  LLA2ENU_MavROS.hpp
utils/gnss-utils/launch/: LLA2ENU_MavROS.launch
utils/gnss-utils/src/gnss_utils/: GNSS_utils.cpp  LLA2ENU.cpp  LLA2ENU_MavROS_node.cpp  LLA2ENU_node.cpp
utils/uav_msgs/: CHANGELOG.rst  package.xml
utils/uav_msgs/msg/: UAVWaypoint.msg
(+58 files in other folders)
