<?xml version="1.0"?>
<package format="2">
    <name>navigation_controller</name>
    <version>0.8.1</version>
    <description>The Navigation Controller package</description>

    <author email="rmendes@beyond-vision.pt">Rui Mendes</author>
    <maintainer email="fabio.azevedo@beyond-vision.pt">Fábio Azevedo</maintainer>
    <maintainer email="andre.ferreira@beyond-vision.pt">André Ferreira</maintainer>

    <license>BSD</license>

    <url>https://gitlab.pdmfc.com/drones/ros1/control/navigation-controller</url>


    <buildtool_depend>catkin</buildtool_depend>
    <depend>geometry_msgs</depend>
    <depend>uav_msgs</depend>
    <depend>mavros_commands</depend>
    <depend>mavros_msgs</depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
    <!-- Other tools can request additional information be placed here -->

    </export>
</package>
