<?xml version="1.0"?>
<package format="2">
    <name>gstreamer</name>
    <version>0.8.3</version>
    <description>GStreamer ROS Package</description>

    <author email="andre.ferreira@beyond-vision.pt">André Ferreira</author>

    <maintainer email="fabio.azevedo@beyond-vision.pt">Fábio Azevedo</maintainer>

    <license>BSD-3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
    <!-- Other tools can request additional information be placed here -->

    </export>
</package>
