<?xml version="1.0"?>
<package format="2">
    <name>heifu_description</name>
    <version>0.7.7</version>
    <description>SDF robot description for HEIFU</description>

    <maintainer email="fabio.azevedo@beyond-vision.pt">Fábio Azevedo</maintainer>
    <maintainer email="andre.ferreira@beyond-vision.pt">André Ferreira</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>gazebo_dev</depend>
    <depend>roslaunch</depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>xacro</exec_depend>

    <export>

    </export>
</package>
