<?xml version="1.0"?>
<package>
    <name>heifu_tools</name>
    <version>0.7.7</version>
    <description>Heifu Tools</description>

    <maintainer email="fabio.azevedo@beyond-vision.pt">Fábio Azevedo</maintainer>
    <maintainer email="andre.ferreira@beyond-vision.pt">André Ferreira</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <run_depend>joy</run_depend>
    <run_depend>joy_teleop</run_depend>
    <run_depend>image_view</run_depend>

    <export>
    <!-- Other tools can request additional information be placed here -->
    </export>
</package>
