<?xml version="1.0"?>
<package format="2">
  <name>control_bringup</name>
  <version>0.8.1</version>
  <description>Bringup of control packages</description>

  <maintainer email="fabio.azevedo@beyond-vision.pt">Fábio Azevedo</maintainer>
  <maintainer email="andre.ferreira@beyond-vision.pt">André Ferreira</maintainer>

  <license>BSD</license>
  <url>https://gitlab.pdmfc.com/drones/ros1/heifu-uav/control</url>

  <author email="fabio.azevedo@beyond-vision.pt">Fábio Azevedo</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_commands</exec_depend>
  <exec_depend>priority_manager</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
