<?xml version="1.0"?>
<package format="2">
    <name>gcs_interface</name>
    <version>0.8.3</version>
    <description>Ground Control Station Interface</description>

    <author email="ricardo.martins@beyond-vision.pt">Ricardo Sacoto Martins</author>

    <maintainer email="fabio.azevedo@beyond-vision.pt">Fábio Azevedo</maintainer>
    <maintainer email="andre.ferreira@beyond-vision.pt">André Ferreira</maintainer>

    <license>BSD-3</license>
    <url>https://gitlab.pdmfc.com/drones/ros1/interface/gcs-interface</url>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <depend>mavros_msgs</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>geographic_msgs</depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
    <!-- Other tools can request additional information be placed here -->

    </export>
</package>
