<?xml version="1.0"?>
<package format="2">
    <name>status_diagnostic</name>
    <version>0.8.2</version>
    <description>Status messages for diagnostic</description>

    <maintainer email="fabio.azevedo@beyond-vision.pt">Fábio Azevedo</maintainer>

    <license>BSD-3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>diagnostic_msgs</depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>topic_tools</depend>

    <exec_depend>mavros</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
    <!-- Other tools can request additional information be placed here -->

    </export>
</package>
