<?xml version="1.0"?>
<package format="2">
  <name>uav_msgs</name>
  <version>0.8.1</version>
  <description>UAV messages package</description>
  <author email="rmendes@beyond-vision.pt">rmendes</author>
  <maintainer email="fabio.azevedo@beyond-vision.pt">Fábio Azevedo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_runtime</depend>

  <export></export>
</package>
