<?xml version="1.0"?>
<package format="2">
  <name>uav_msgs</name>
  <version>0.8.2</version>
  <description>UAV messages package</description>
  <author email="rmendes@beyond-vision.pt">Rui Mendes</author>
  <maintainer email="fabio.azevedo@beyond-vision.pt">Fábio Azevedo</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>

  <export></export>
</package>
